src/components/modus-wc-navbar/modus-wc-navbar.scss
modus-wc-navbar .modus-wc-navbar {
  height: 56px;
  min-height: 0;
  padding: 0 var(--modus-wc-spacing-md);

  // Common button styles
  modus-wc-button {
    display: inline-flex;

    svg {
      height: 32px;
    }
  }

  .modus-wc-btn.modus-wc-btn-borderless.modus-wc-btn-primary {
    color: var(--modus-wc-color-trimble-gray);
  }

  // Common dropdown styles
  %dropdown-menu {
    position: absolute;
    top: 45px;
    z-index: 99;

    &.hidden {
      display: none;
    }

    &.visible {
      display: block;
    }
  }

  %flex-align-center {
    align-items: center;
    display: flex;
    position: relative;
  }

  [slot='start'] {
    @extend %flex-align-center;

    modus-wc-button {
      padding-inline-end: var(--modus-wc-spacing-sm);
    }

    // Menu slot
    .main-menu {
      @extend %dropdown-menu;

      height: calc(100dvh - 56px); // 56px is the navbar height
      left: calc(-1 * var(--modus-wc-spacing-md));
      min-width: 256px;
    }

    // Trimble logo button
    .trimble-logo.modus-wc-btn.modus-wc-btn-borderless.modus-wc-btn-primary {
      padding: 0 var(--modus-wc-spacing-lg);

      svg {
        height: 24px;
      }
    }
  }

  [slot='center'] {
    @extend %flex-align-center;
  }

  [slot='end'] {
    @extend %flex-align-center;

    modus-wc-button,
    modus-wc-text-input {
      padding-inline-start: var(--modus-wc-spacing-sm);
    }

    // Condensed menu
    modus-wc-menu {
      @extend %dropdown-menu;

      right: var(--modus-wc-spacing-2xl);
      z-index: 99;
    }

    // Notifications slot
    .notifications {
      @extend %dropdown-menu;

      right: 100px;
    }

    // Apps slot
    .apps {
      @extend %dropdown-menu;

      right: var(--modus-wc-spacing-2xl);
    }

    // User slot
    .user {
      @extend %dropdown-menu;

      right: 0;

      modus-wc-card article.modus-wc-card {
        align-items: center;
        padding: var(--modus-wc-spacing-xl);
        width: max-content;

        .initials {
          background-color: var(--modus-wc-color-black);
          border-radius: 50%;
          color: var(--modus-wc-color-white);
          font-weight: var(--modus-wc-font-weight-semibold);
          padding: var(--modus-wc-spacing-sm);
        }

        .modus-wc-card-body {
          align-items: center;
        }

        modus-wc-button {
          padding: 0;
        }

        .sign-out.modus-wc-btn.modus-wc-btn-borderless.modus-wc-btn-primary {
          color: var(--modus-wc-color-trimble-blue);
        }
      }
    }

    // User button
    .user-button.modus-wc-btn.modus-wc-btn-borderless.modus-wc-btn-primary {
      background-color: var(--modus-wc-color-black);
      color: var(--modus-wc-color-white);

      .modus-wc-avatar {
        height: 32px;
        width: 32px;
      }
    }
  }
}

[data-theme='modus-classic-dark'] modus-wc-navbar .modus-wc-navbar,
[data-theme='modus-modern-dark'] modus-wc-navbar .modus-wc-navbar {
  // Common button styles
  &:not(.trimble-logo)
    .modus-wc-btn.modus-wc-btn-borderless.modus-wc-btn-primary {
    color: var(--modus-wc-color-white);
  }

  // Trimble logo button
  .trimble-logo.modus-wc-btn.modus-wc-btn-borderless.modus-wc-btn-primary path {
    fill: var(--modus-wc-color-white);
  }

  // Sign out button
  .user
    modus-wc-card
    article.modus-wc-card
    .sign-out.modus-wc-btn.modus-wc-btn-borderless.modus-wc-btn-primary {
    color: var(--modus-wc-color-white);
  }
}

